[package]
name = "nerualnet_gradient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0" # Or a newer version
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
flate2 = "1.0.24"
byteorder = "1.4.3"